--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -99,110 +99,68 @@ jobs:
           if [ -n "${AMP_API_KEY:-}" ]; then echo "::add-mask::${AMP_API_KEY}"; fi
           if [ -n "${ANTHROPIC_API_KEY:-}" ]; then echo "::add-mask::${ANTHROPIC_API_KEY}"; fi
 
-          # Compose the instruction sent to cli (ask for JSON, but don't hard-fail if it adds prose)
+          # Compose the instruction sent to cli (plain Markdown output)
           INSTRUCTION=$(cat <<'EOF'
           You are performing a single-pass human-style PR review.
 
           Inputs:
           - You will receive a unified diff (the PR patch) via stdin.
-          - Use GitHub PR diff positions (not absolute line numbers) for inline notes.
           - Comment only on added lines; avoid spam.
 
-          Output:
-          - Return a single JSON object with the following shape (no explanations needed):
-            {
-              "summaryMarkdown": string,
-              "comments": [ { "path": string, "position": integer, "body": string } ],
-              "status": { "state": "success" | "failure", "description": string }
-            }
-          - Choose "failure" when issues require follow-up before merge; otherwise "success".
-          - Keep status description under 120 characters (GitHub limit is 140).
-          - Do not use emoji in any part of the response.
+          Output format - plain Markdown with these sections:
+          
+          ## Summary
+          [Overall assessment in 2-3 sentences]
+          
+          ## Comments
+          [If you have specific inline comments, list them as:]
+          - **filename.ext:L123**: [comment about that line]
+          
+          ## Status
+          [Either "✅ LGTM" or "❌ Needs work" with brief reason]
+          
+          Keep it concise and constructive. Focus on correctness, security, and readability.
           EOF
           )
 
           # Run CLI in execute mode: diff on stdin, instruction as the message
-          # Save the full output (may include prose) so we can extract JSON robustly
-          echo "Running initial AI review..."
+          echo "Running AI review..."
           echo "Command: $REVIEW_CLI_BIN $REVIEW_CLI_ARGS"
           echo "Diff size: $(wc -c < diff.patch) bytes"
           cat diff.patch | timeout 300 "$REVIEW_CLI_BIN" $REVIEW_CLI_ARGS "${SYSTEM_PROMPT}
 
-          ${INSTRUCTION}" > cli.out || {
-            echo "First AI call failed or timed out, creating fallback response"
-            echo '{"summaryMarkdown":"## Summary\nAI review timed out or failed.","comments":[],"status":{"state":"success","description":"AI Review completed with timeout"}}' > cli.json
-            jq -r '.summaryMarkdown' cli.json > review.md
-            jq -c '.comments' cli.json > comments.json
-            jq -c '.status' cli.json > status.json
-            exit 0
+          ${INSTRUCTION}" > review.md || {
+            echo "AI call failed or timed out, creating fallback response"
+            echo "## Summary" > review.md
+            echo "AI review timed out or failed." >> review.md
+            echo "" >> review.md
+            echo "## Status" >> review.md
+            echo "✅ LGTM (fallback due to timeout)" >> review.md
           }
 
-          echo "First AI call completed, extracting JSON..."
-          echo "--- Full CLI Output ---"
-          cat cli.out
-          echo -e "\n--- End Full CLI Output ---"
-          echo "CLI output file size: $(wc -c < cli.out) bytes"
+          echo "AI review completed"
+          echo "--- Review Output ---"
+          cat review.md
+          echo -e "\n--- End Review Output ---"
 
-          # Try multiple JSON extraction methods since amp output is non-deterministic
-          echo "Extracting JSON from CLI output (trying multiple methods)..."
-          
-          # Method 1: Try raw output as JSON
-          echo "Method 1: Testing raw output as JSON..."
-          if jq -e . cli.out >/dev/null 2>&1; then
-            echo "Raw output is valid JSON!"
-            cp cli.out cli.json
-          # Method 2: Try extracting from markdown fences  
-          elif grep -q '```json' cli.out; then
-            echo "Method 2: Found markdown JSON fences, extracting..."
-            sed -n '/```json/,/```/p' cli.out | sed '1d;$d' > cli.json.tmp
-            if jq -e . cli.json.tmp >/dev/null 2>&1; then
-              echo "Markdown extraction successful!"
-              mv cli.json.tmp cli.json
-            else
-              echo "Markdown extraction failed, trying method 3..."
-              rm -f cli.json.tmp
-            fi
-          fi
-          
-          # Method 3: Use amp to extract JSON if methods 1-2 failed
-          if [ ! -f cli.json ] || ! jq -e . cli.json >/dev/null 2>&1; then
-            echo "Method 3: Using amp to extract JSON..."
-            timeout 120 bash -c 'cat cli.out | "$0" $1 "$2" > cli.json.tmp' "$REVIEW_CLI_BIN" "$REVIEW_CLI_ARGS" "Extract the first valid JSON object from this text that has keys summaryMarkdown, comments, and status. Output only the JSON object, no other text." && mv cli.json.tmp cli.json || {
-              echo "Amp extraction failed, creating fallback response"
-              echo '{"summaryMarkdown":"## Summary\nJSON extraction failed.","comments":[],"status":{"state":"success","description":"AI Review completed with extraction failure"}}' > cli.json
-            }
+          # Parse status for commit status (look for ✅ or ❌)
+          if grep -q "❌" review.md; then
+            echo '{"state":"failure","description":"AI Review found issues"}' > status.json
+          else
+            echo '{"state":"success","description":"AI Review completed"}' > status.json
           fi
 
-          echo "Final validation of extracted JSON..."
-          echo "--- First 200 chars of extracted JSON ---"
-          head -c 200 cli.json
-          echo -e "\n--- End JSON Preview ---"
-
-          # Final validation and fallback
-          jq -e . cli.json >/dev/null 2>&1 || { 
-            echo "All JSON extraction methods failed, using fallback" >&2
-            echo '{"summaryMarkdown":"## Summary\nInvalid JSON generated.","comments":[],"status":{"state":"success","description":"AI Review completed with invalid JSON"}}' > cli.json
-          }
-
-          jq -r '.summaryMarkdown // "## Summary\n_AI did not return a summary._"' cli.json > review.md
-          jq -c '.comments // []' cli.json > comments.json
-          jq -c '.status // {"state":"success","description":"AI Review completed"}' cli.json > status.json
-
-      - name: Post single PR review (summary + inline notes)
+      - name: Post PR review
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
-          # Build review payload with body + comments array
-          # (The Create a review API expects: { body, event, comments: [{path, position, body}, ...] })
-          # Cap inline comments to first 300 to avoid API limits
-          jq '.[0:300]' comments.json > comments.limited.json
+          # Build review payload with just the markdown body
           jq -n \
             --arg event "${REVIEW_EVENT}" \
             --arg body "$(cat review.md)" \
-            --argjson comments "$(cat comments.limited.json)" \
-            '{ event: $event, body: $body, comments: $comments }' > review_payload.json
+            '{ event: $event, body: $body }' > review_payload.json
 
           # Post the review
           gh api \
