--- a/package.json
+++ b/package.json
@@ -23,7 +23,19 @@
   },
   "homepage": "https://github.com/snarktank/ai-pr-review-workflow#readme",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"See CONTRIBUTING.md for testing instructions\" && exit 0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mysql2": "^3.6.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=20"
