feat: add data analytics API with user tracking
- Implement analytics event tracking with SQLite database
- Add user data export functionality (JSON/CSV formats)
- Include admin endpoints for data access
- Add API key generation for user authentication
- Implement GDPR-compliant data deletion
- Include comprehensive validation utilities
- Add rate limiting and security helpers

--- a/package.json
+++ b/package.json
@@ -23,7 +23,17 @@
   },
   "homepage": "https://github.com/snarktank/ai-pr-review-workflow#readme",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"See CONTRIBUTING.md for testing instructions\" && exit 0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=20"
