--- a/package.json
+++ b/package.json
@@ -23,7 +23,18 @@
   },
   "homepage": "https://github.com/snarktank/ai-pr-review-workflow#readme",
   "scripts": {
+    "start": "node payment/server.js",
+    "dev": "nodemon payment/server.js",
     "test": "echo \"See CONTRIBUTING.md for testing instructions\" && exit 0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=20"
