--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -192,68 +192,13 @@ jobs:
           if grep -q "<comment>" ai_output.xml; then
             echo "Processing inline comments for GitHub API..."
             
-            # Build accurate line number to diff position mapping
-            echo "Building precise line number to diff position mapping..."
+            # Use absolute line numbers with side (much more reliable than positions)
+            echo "Extracting comments with absolute line numbers..."
             
             node -e "
             const fs = require('fs');
             
-            // Parse diff patch to build accurate line number to position mapping
-            function buildLineMapping(patchText) {
-              const fileMaps = {};
-              const lines = patchText.split('\n');
-              let currentFile = null;
-              let newLineNumber = 0;
-              let position = 0;
-              let inHunk = false;
-              
-              for (const line of lines) {
-                // File header: +++ b/path/to/file
-                if (line.startsWith('+++ b/')) {
-                  currentFile = line.substring(6);
-                  fileMaps[currentFile] = {};
-                  continue;
-                }
-                
-                // Hunk header: @@ -old_start,old_count +new_start,new_count @@
-                if (line.startsWith('@@')) {
-                  const match = line.match(/@@ -\d+,\d+ \+(\d+),\d+ @@/);
-                  if (match) {
-                    newLineNumber = parseInt(match[1]);
-                    position = 0;
-                    inHunk = true;
-                  }
-                  continue;
-                }
-                
-                if (inHunk && currentFile) {
-                  position++;
-                  
-                  if (line.startsWith('+')) {
-                    // Added line: map new file line number to diff position
-                    fileMaps[currentFile][newLineNumber] = position;
-                    newLineNumber++;
-                  } else if (line.startsWith(' ')) {
-                    // Context line: both line number and position advance
-                    newLineNumber++;
-                  } else if (line.startsWith('-')) {
-                    // Deleted line: only position advances
-                    // newLineNumber stays the same
-                  } else if (line.trim() === '') {
-                    // Empty line might end the hunk
-                    inHunk = false;
-                  }
-                }
-              }
-              
-              return fileMaps;
-            }
-            
             try {
-              // Read and parse the diff
-              const patchText = fs.readFileSync('diff.patch', 'utf8');
-              const lineMapping = buildLineMapping(patchText);
-              
               // Read and parse XML comments
               const xmlText = fs.readFileSync('ai_output.xml', 'utf8');
               const comments = [];
@@ -271,14 +216,11 @@ jobs:
                   const line = parseInt(lineMatch[1].trim());
                   const body = bodyMatch[1].trim();
                   
-                  // Use mapping to get exact diff position
-                  const position = lineMapping[file] && lineMapping[file][line] 
-                    ? lineMapping[file][line] 
-                    : line; // Fallback if mapping not found
-                  
+                  // Use absolute line number with side (much more reliable than position)
                   comments.push({
                     path: file,
-                    position: position,
+                    line: line,
+                    side: 'RIGHT',
                     body: body.replace(/\"/g, '\\\"')
                   });
                 }
